Site başlık değişti

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Yemek Cehennemi</h1>
-            <span class="subheading">Bir dobik olmak için ihtiyacınız olan site.</span>
+            <h1>Yemek Sitesi</h1>
+            <span class="subheading">Blog denemesi için yapılan yemek sitesi</span>
           </div>
         </div>
       </div>
