favicon and main image

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,15 @@
 {% include "header.html" %}
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1499028344343-cd173ffc68a9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80')">
+  <header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1506280754576-f6fa8a873550?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzV8fGl0YWxpYW4lMjBmb29kfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60')">
+
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Yemek Sitesi</h1>
-            <span class="subheading">Blog denemesi için yapılan yemek sitesi</span>
+            <h1>Pratik Yemekler</h1>
+            <span class="subheading">Kısıtlı zamanı olanlar için hızlı yemek tarifleri</span>
           </div>
         </div>
       </div>
